To get it to run on ny device

--- a/ShellNavigation/ShellNavigationSpeedTest/ShellNavigationSpeedTest.csproj
+++ b/ShellNavigation/ShellNavigationSpeedTest/ShellNavigationSpeedTest.csproj
@@ -9,7 +9,7 @@
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<RuntimeIdentifiers>android-arm</RuntimeIdentifiers>
+		<RuntimeIdentifiers>android-x86</RuntimeIdentifiers>
 
 		<!-- Display name -->
 		<ApplicationTitle>ShellNavigationSpeedTest</ApplicationTitle>
